added sharing tags

--- a/index.html
+++ b/index.html
@@ -11,6 +11,38 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Mono:wght@300&display=swap"
       rel="stylesheet"
     />
+
+    <!-- FB OG Tags -->
+    <meta
+      property="og:url"
+      content="https://sorry-i-just-went-into-a-tunn.isjackwild.com"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sorry, I went into a tunn..." />
+    <meta
+      property="og:description"
+      content="Hi, there appears to be a few issues with the report you emailed over which I need fixing before the 9AM board meeting. I'm on the train there now"
+    />
+    <meta
+      property="og:image"
+      content="https://sorry-i-just-went-into-a-tunn.isjackwild.com/sharing.jpg"
+    />
+    <meta property="og:image:width" content="1600" />
+    <meta property="og:image:height" content="836" />
+
+    <!-- Twitter & Slack Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@isjackwild" />
+    <meta name="twitter:creator" content="@isjackwild" />
+    <meta name="twitter:title" content="I went into a tunn..." />
+    <meta
+      name="twitter:description"
+      ccontent="Hi, there appears to be a few issues with the report you emailed over which I need fixing before the 9AM board meeting. I'm on the train there now"
+    />
+    <meta
+      name="twitter:image"
+      content="https://sorry-i-just-went-into-a-tunn.isjackwild.com/sharing.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
