--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Mono:wght@300&display=swap"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
 
     <!-- FB OG Tags -->
     <meta
