--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sorry, I went into a tunn..</title>
+    <title>Sorry, I just went into a tunn...</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,10 +19,10 @@
       content="https://sorry-i-just-went-into-a-tunn.isjackwild.com"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Sorry, I went into a tunn..." />
+    <meta property="og:title" content="Sorry, I just went into a tunn..." />
     <meta
       property="og:description"
-      content="Hi, there appears to be a few issues with the report you emailed over which I need fixing before the 9AM board meeting. I'm on the train there now"
+      content="Hi, I'm on the train on the way to the important board meeting in Paris. There appears to be a few issues with the report you emailed over which I need fix..."
     />
     <meta
       property="og:image"
@@ -35,10 +35,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@isjackwild" />
     <meta name="twitter:creator" content="@isjackwild" />
-    <meta name="twitter:title" content="I went into a tunn..." />
+    <meta name="twitter:title" content="Sorry, I just went into a tunn..." />
     <meta
       name="twitter:description"
-      ccontent="Hi, there appears to be a few issues with the report you emailed over which I need fixing before the 9AM board meeting. I'm on the train there now"
+      content="Hi, I'm on the train on the way to the important board meeting in Paris. There appears to be a few issues with the report you emailed over which I need fix..."
     />
     <meta
       name="twitter:image"
