updated site title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sorry, I just went into a tunn...</title>
+    <title>Sorry, I went into a tunn...</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,17 +16,17 @@
     <!-- FB OG Tags -->
     <meta
       property="og:url"
-      content="https://sorry-i-just-went-into-a-tunn.isjackwild.com"
+      content="https://sorry-i-went-into-a-tunn.isjackwild.com"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Sorry, I just went into a tunn..." />
+    <meta property="og:title" content="Sorry, I went into a tunn..." />
     <meta
       property="og:description"
       content="Hi, I'm on the train on the way to the important board meeting in Paris. There appears to be a few issues with the report you emailed over which I need fix..."
     />
     <meta
       property="og:image"
-      content="https://sorry-i-just-went-into-a-tunn.isjackwild.com/sharing.jpg"
+      content="https://sorry-i-went-into-a-tunn.isjackwild.com/sharing.jpg"
     />
     <meta property="og:image:width" content="1600" />
     <meta property="og:image:height" content="836" />
@@ -35,14 +35,14 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@isjackwild" />
     <meta name="twitter:creator" content="@isjackwild" />
-    <meta name="twitter:title" content="Sorry, I just went into a tunn..." />
+    <meta name="twitter:title" content="Sorry, I went into a tunn..." />
     <meta
       name="twitter:description"
       content="Hi, I'm on the train on the way to the important board meeting in Paris. There appears to be a few issues with the report you emailed over which I need fix..."
     />
     <meta
       name="twitter:image"
-      content="https://sorry-i-just-went-into-a-tunn.isjackwild.com/sharing.jpg"
+      content="https://sorry-i-went-into-a-tunn.isjackwild.com/sharing.jpg"
     />
   </head>
   <body>
